Prevent long words overflow in private chat
fixes https://github.com/online-go/online-go.com/issues/509

--- a/src/components/PrivateChat/PrivateChat.styl
+++ b/src/components/PrivateChat/PrivateChat.styl
@@ -124,6 +124,7 @@
         //margin-bottom: -.4em;
         border-radius: 0;
         overflow-y: auto;
+        word-wrap: break-word;
     }
 
     .chat-line {
